@@ -1,3 +1,6 @@
+2009-02-02  Ozan Çağlayan <ozan@pardus.org.tr>
+	* bin/mudur.py (stopSystem): Use lambda function for sort helper.
+
 2009-02-02  Bahadır Kandemir <bahadir@pardus.org.tr>
 	* bin/mudur.py: Handle logger.sync() exceptions (Fixes #7410).
 
